--- a/index.html
+++ b/index.html
@@ -21,64 +21,113 @@
 
 <body>
     <!-- VERSION MOBILE -->
-    <div class="container-fluid h-100 p-0 d-flex flex-column align-items-center d-lg-none">
+    <div class="container-fluid h-100 p-0 d-flex flex-column align-items-center d-xl-none">
         <header class="w-100 mb-5 d-flex ">
             <img src="assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
             <h1 class="ms-4 align-self-center text-center">Tableau de bord</h1>
-            <div id="userStatut" class="align-self-end d-flex justify-content-center text-truncate">Jean Dupont <span
-                    class="align-self-center m-0 ms-1 me-2 p-0" id="connectStatut"></span></div>
         </header>
-        <div class="row justify-content-around w-100">
+        <div class="row justify-content-center w-100">
             <div class="col-4 navBtnMob">
                 <a href="pages/devoirs.html">
                     <img src="assets/img/devoirs.webp" class="img-fluid" alt="">
                 </a>
             </div>
-            <div class="col-4 navBtnMob">
+            <div class="col-4 offset-1 navBtnMob">
                 <a href="pages/note.html">
                     <img src="assets/img/LogoNote.webp" class="img-fluid" alt="">
                 </a>
             </div>
-        </div>
-        <div class="row justify-content-around w-100 mt-5">
-            <div class="col-4 navBtnMob">
+            <div class="col-4 mt-4 navBtnMob">
                 <a href="pages/edt.html">
                     <img src="assets/img/Edt.webp" class="img-fluid" alt="">
                 </a>
             </div>
-            <div class="col-4 navBtnMob">
+            <div class="col-4 mt-4  offset-1 navBtnMob">
                 <a href="pages/absences.html">
                     <img src="assets/img/absences.webp" class="img-fluid" alt="">
                 </a>
             </div>
-        </div>
-        <div class="row justify-content-around w-100 mt-5">
-            <div class="col-4 navBtnMob">
+            <div class="col-4 mt-4 navBtnMob ">
                 <a href="pages/agenda.html">
                     <img src="assets/img/agenda.png" class="img-fluid" alt="">
                 </a>
             </div>
-            <div class="col-4 navBtnMob">
+            <div class="col-4 mt-4 offset-1 navBtnMob">
                 <a href="pages/tchat.html">
                     <img src="assets/img/message.png" class="img-fluid" alt="">
                 </a>
             </div>
         </div>
 
-        <footer class="d-flex flex-column justify-content-center align-items-center">
 
-            <a href="pages/mention.html" class="text-white " data-bs-toggle="modal" data-bs-target="#exampleModal">Un
-                problème ?</a>
-            <a href="pages/mention.html" class="text-white">Mentions légales</a>
-        </footer>
     </div>
     <!-- VERSION DESKTOP -->
-    <div class="container-fluid h-100 p-0 d-flex flex-column align-items-center d-lg-block">
+    <div class="container-fluid d-none d-lg-none d-xl-block h-100 p-0 align-items-center">
         <header class="mb-5 d-flex w-100">
-            <img src="assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
-            <h1 class="ms-4 align-self-center text-center">Tableau de bord</h1>
+            <div class="logoBloc">
+                <img src="assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
+            </div>
+            <div class="ms-4 w-100 d-flex align-items-center justify-content-center">
+                <h1>Tableau de bord</h1>
+            </div>
             
+            <div class="logoBloc">
+                <img src="assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
+            </div>
         </header>
+        <div class="h-75 w-100 d-flex ps-5 pe-5">
+            <div class="row h-100 w-75 ">
+                <div class="row w-100 h-50">
+                    <div class="offset-1 col-3 h-100 resumeBloc">
+                        <h2>Notes</h2>
+                        <div id="noteBloc">
+
+                        </div>
+                    </div>
+                    <div class="offset-1 col-5 h-100 resumeBloc">
+                        <h2>Devoirs</h2>
+                        <div id="homeworkBloc">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row w-100 h-50 mt-4">
+                    <div class="col-5 h-100 resumeBloc">
+                        <h2>Emploi du temps</h2>
+                        <div id="edtBloc">
+
+                        </div>
+                    </div>
+                    <div class="offset-1 col-3 h-100 resumeBloc">
+                        <h2>Absences</h2>
+                        <div id="absentBloc">
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row h-100 w-25">
+                <div class="col-12 h-100 p-0" id="chatBloc">
+                    <div id="topChat" class="d-flex">
+                        <div id="chatContact">
+
+                        </div>
+                        <div id="chatMessage">
+    
+                        </div>
+                    </div>
+                    <div id="chatBar" class="d-flex">
+                        <div id="chatBtnBloc">
+                            <button id="chatBtnSend">
+                                <img src="assets/img/envoie.png" alt="Bouton enoyer un message dans le tchat" class="img-fluid w-75">
+                            </button>
+                        </div>
+                        <textarea type="text" name="" id="chatInput"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
         <footer class="d-flex flex-column justify-content-center align-items-center">
