--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
                 </a>
             </div>
         </div>
-
+        <footer class="d-flex flex-column justify-content-center align-items-center">
+            <a href="pages/mention.html" class="text-white " data-bs-toggle="modal" data-bs-target="#exampleModal">Un
+                problème ?</a>
+            <a href="pages/mention.html" class="text-white">Mentions légales</a>
+        </footer>
 
     </div>
     <!-- VERSION DESKTOP -->
