--- a/pages/devoirs.html
+++ b/pages/devoirs.html
@@ -21,18 +21,23 @@
 
 <body>
     <div class="container-fluid h-100 p-0">
-        <header class="w-100 mb-5 d-flex ">
+        <header class="w-100 mb-5 d-flex">
             <img src="../assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
             <h1 class="ms-4 align-self-center text-center m-0">Devoirs</h1>
         </header>
-        <div class="row h-100">
-            <div class="col-10 resumeBloc h-50">
-
+        <div class="row h-75 justify-content-center justify-content-lg-evenly">
+            <div class="col-10 col-lg-4 resumeBloc h-50 mb-4">
+                <h2>A rendre</h2>
             </div>
-            <div class="col-10 resumeBloc h-50">
-
+            <div class="col-10 col-lg-4 resumeBloc h-50">
+                <h2>Rendu</h2>
             </div>
         </div>
+        <footer class="d-flex flex-column justify-content-center align-items-center">
+            <a href="pages/mention.html" class="text-white " data-bs-toggle="modal" data-bs-target="#exampleModal">Un
+                problème ?</a>
+            <a href="pages/mention.html" class="text-white">Mentions légales</a>
+        </footer>
     </div>
     <!-- Bootstrap JavaScript -->
     <script src="../assets/js/bootstrap/bootstrap.js"></script>
