--- a/pages/devoirs.html
+++ b/pages/devoirs.html
@@ -21,8 +21,11 @@
 
 <body>
     <div class="container-fluid h-100 p-0">
-        <header class="w-100 mb-5 d-flex">
+        <header class="w-100 mb-5 d-flex align-items-center">
             <img src="../assets/img/LOGO SOLO.png" class="ms-3 h-100" alt="">
+            <a href="../index.html" class="h-100 d-flex align-items-center">
+                <img src="../assets/img/backward.png" class="img-fluid" width="50" alt="">
+            </a>
             <h1 class="ms-4 align-self-center text-center m-0">Devoirs</h1>
         </header>
         <div class="row h-75 justify-content-center justify-content-lg-evenly">
@@ -31,6 +34,33 @@
             </div>
             <div class="col-10 col-lg-4 resumeBloc h-50">
                 <h2>Rendu</h2>
+            </div>
+        </div>
+        <div class="row justify-content-evenly w-100 d-none d-lg-flex">
+            <div class="col-1 navBtnMob">
+                <a href="note.html">
+                    <img src="../assets/img/LogoNote.webp" class="img-fluid" width="100" alt="">
+                </a>
+            </div>
+            <div class="col-1 navBtnMob">
+                <a href="edt.html">
+                    <img src="../assets/img/Edt.webp" class="img-fluid" width="100" alt="">
+                </a>
+            </div>
+            <div class="col-1  navBtnMob">
+                <a href="absences.html">
+                    <img src="../assets/img/absences.webp" class="img-fluid" width="100" alt="">
+                </a>
+            </div>
+            <div class="col-1 navBtnMob ">
+                <a href="agenda.html">
+                    <img src="../assets/img/agenda.png" class="img-fluid" width="100" alt="">
+                </a>
+            </div>
+            <div class="col-1 navBtnMob">
+                <a href="tchat.html">
+                    <img src="../assets/img/message.png" class="img-fluid" width="100" alt="">
+                </a>
             </div>
         </div>
         <footer class="d-flex flex-column justify-content-center align-items-center">
